--- a/bestbooks/core/static/css/styles.css
+++ b/bestbooks/core/static/css/styles.css
@@ -19,6 +19,14 @@ h1, h2, h3 {
 }
 
 /* NAVIGATION (if used) */
+
+nav {
+    padding: 1rem;
+    background-color: #44B78B;
+    color: white;
+    font-size: 2.5rem;
+}
+
 .navbar {
     background-color: #007bff;
     color: white;
@@ -105,6 +113,8 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+
 
 /* LINKS */
 a {
