Refactor code structure for improved readability and maintainability. Improved profile pages, added the feature to start trades.

--- a/bestbooks/core/static/css/styles.css
+++ b/bestbooks/core/static/css/styles.css
@@ -22,7 +22,7 @@ h1, h2, h3 {
 
 nav {
     padding: 1rem;
-    background-color: #44B78B;
+    background-color: #b1abab;
     color: white;
     font-size: 2.5rem;
 }
