--- a/bestbooks/core/templates/core/layout.html
+++ b/bestbooks/core/templates/core/layout.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>
-        {% block title %} This is a Title {% endblock %}
+        {% block title %} 
+        This is a Title 
+        {% endblock %}
     </title>
     
     <script src="{% static 'js/main.js' %}"></script>
