--- a/bestbooks/core/templates/core/settings.html
+++ b/bestbooks/core/templates/core/settings.html
@@ -1,18 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'core/layout.html' %}
+
+{% block title %}Settings{% endblock %}
+
+{% block content %}
     <a href="{% url 'home' %}" id="go_home_id">Home</a>
     <h1>Settings</h1>
     <form action="{% url 'signout' %}" method="post">
-    {% csrf_token %}
-    <button type="submit">Sign Out</button>
-</form>
-</body>
-</html>
+        {% csrf_token %}
+        <button type="submit">Sign Out</button>
+    </form>
+{% endblock %}
